PR/39947 - Juan RP -- dbcool_detach implicitly called   sysmon_envsys_destroy() twice